Finished First Page Layout

--- a/BagReminderApp/Base.lproj/Main.storyboard
+++ b/BagReminderApp/Base.lproj/Main.storyboard
@@ -18,13 +18,28 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="HIg-Pr-uPQ">
-                                <rect key="frame" x="16" y="20" width="568" height="485"/>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HIg-Pr-uPQ">
+                                <rect key="frame" x="20" y="20" width="560" height="413"/>
                             </scrollView>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dB0-Jq-6Br">
-                                <rect key="frame" x="248" y="513" width="105" height="30"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Current Home Address:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rlp-Ha-Wmw">
+                                <rect key="frame" x="20" y="479" width="189" height="21"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="t2A-5A-CQy"/>
+                                    <constraint firstAttribute="height" constant="21" id="7me-a2-CEK"/>
+                                    <constraint firstAttribute="width" constant="189" id="a2l-S3-EST"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="JKF-wb-vPX">
+                                <rect key="frame" x="20" y="513" width="560" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dB0-Jq-6Br">
+                                <rect key="frame" x="242" y="441" width="117" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="117" id="ax8-Rs-BkM"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                 <state key="normal" title="Set Home"/>
@@ -35,14 +50,27 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="dB0-Jq-6Br" firstAttribute="top" secondItem="HIg-Pr-uPQ" secondAttribute="bottom" constant="8" symbolic="YES" id="2xJ-0E-goc"/>
-                            <constraint firstItem="HIg-Pr-uPQ" firstAttribute="trailing" secondItem="tsR-hK-woN" secondAttribute="trailingMargin" id="Kfb-8F-dtS"/>
-                            <constraint firstItem="HIg-Pr-uPQ" firstAttribute="width" secondItem="tsR-hK-woN" secondAttribute="width" id="LTM-al-1Ni"/>
-                            <constraint firstItem="HIg-Pr-uPQ" firstAttribute="top" secondItem="Ia1-K6-d13" secondAttribute="bottom" id="QdZ-di-sRo"/>
-                            <constraint firstItem="4ug-Mw-9AY" firstAttribute="top" secondItem="dB0-Jq-6Br" secondAttribute="bottom" constant="8" symbolic="YES" id="SR3-Yt-Cn8"/>
-                            <constraint firstItem="HIg-Pr-uPQ" firstAttribute="leading" secondItem="tsR-hK-woN" secondAttribute="leadingMargin" id="poI-uM-u7f"/>
-                            <constraint firstItem="dB0-Jq-6Br" firstAttribute="centerX" secondItem="HIg-Pr-uPQ" secondAttribute="centerX" id="wrO-fi-PZr"/>
+                            <constraint firstItem="JKF-wb-vPX" firstAttribute="centerX" secondItem="dB0-Jq-6Br" secondAttribute="centerX" id="030-5B-eVN"/>
+                            <constraint firstItem="JKF-wb-vPX" firstAttribute="top" secondItem="Rlp-Ha-Wmw" secondAttribute="bottom" constant="13" id="0gV-Qt-EQ2"/>
+                            <constraint firstItem="Rlp-Ha-Wmw" firstAttribute="top" secondItem="HIg-Pr-uPQ" secondAttribute="bottom" constant="46" id="8PP-VK-PO5"/>
+                            <constraint firstItem="JKF-wb-vPX" firstAttribute="leading" secondItem="tsR-hK-woN" secondAttribute="leadingMargin" id="AdH-se-PDJ"/>
+                            <constraint firstItem="Rlp-Ha-Wmw" firstAttribute="leading" secondItem="JKF-wb-vPX" secondAttribute="leading" id="H8S-pF-lIP"/>
+                            <constraint firstItem="HIg-Pr-uPQ" firstAttribute="trailing" secondItem="JKF-wb-vPX" secondAttribute="trailing" id="IIZ-2D-AP7"/>
+                            <constraint firstItem="JKF-wb-vPX" firstAttribute="top" secondItem="dB0-Jq-6Br" secondAttribute="bottom" constant="42" id="MMb-x0-zuf"/>
+                            <constraint firstItem="HIg-Pr-uPQ" firstAttribute="top" secondItem="Ia1-K6-d13" secondAttribute="bottom" id="OA6-0N-uNQ"/>
+                            <constraint firstItem="4ug-Mw-9AY" firstAttribute="top" secondItem="JKF-wb-vPX" secondAttribute="bottom" constant="8" symbolic="YES" id="U9A-uH-aVT"/>
+                            <constraint firstItem="HIg-Pr-uPQ" firstAttribute="trailing" secondItem="tsR-hK-woN" secondAttribute="trailingMargin" id="VeZ-Mm-Clw"/>
+                            <constraint firstItem="dB0-Jq-6Br" firstAttribute="top" secondItem="HIg-Pr-uPQ" secondAttribute="bottom" constant="8" symbolic="YES" id="cFV-a6-3RK"/>
+                            <constraint firstItem="HIg-Pr-uPQ" firstAttribute="centerX" secondItem="tsR-hK-woN" secondAttribute="centerX" id="iF0-v5-Aft"/>
+                            <constraint firstItem="HIg-Pr-uPQ" firstAttribute="leading" secondItem="tsR-hK-woN" secondAttribute="leadingMargin" constant="-4" id="kTD-Di-1t1"/>
+                            <constraint firstItem="Rlp-Ha-Wmw" firstAttribute="leading" secondItem="HIg-Pr-uPQ" secondAttribute="leading" id="krj-Hc-lmX"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="iF0-v5-Aft"/>
+                                <exclude reference="kTD-Di-1t1"/>
+                            </mask>
+                        </variation>
                     </view>
                     <tabBarItem key="tabBarItem" title="First" image="first" id="acW-dT-cKf"/>
                     <connections>
